dnl Process this file with autoconf to produce a configure script.

AC_INIT(mstflint, 1.4, orenk@mellanox.co.il)

AC_DEFINE_UNQUOTED([PROJECT], ["mstflint"], [Define the project name.])
AC_SUBST([PROJECT])

AC_DEFINE_UNQUOTED([VERSION], ["1.4"], [Define the project version.])
AC_SUBST([VERSION])

AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SRCDIR([README])
AM_INIT_AUTOMAKE(mstflint, 1.4)

dnl Checks for programs
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LIBTOOL
AC_CONFIG_HEADERS( config.h )

AC_CONFIG_FILES([Makefile mstflint.spec])
AC_OUTPUT
